--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,3 +3,6 @@ spring:
     url: jdbc:postgresql://localhost:5438/buy_recipe
     username: postgres
     password: password
+  liquibase:
+    enabled: true
+    change-log: classpath:db/changelog/db.changelog-master.xml
